2095.	[bug]		marcin, tmark
	Added a compile-time check if the PostgreSQL version supports
	the "tcp-user-timeout" parameter. This parameter is available in
	the PostgreSQL version 12 and later. It is now ignored for the
	earlier versions and a suitable warning message is issued.
	(Gitlab #2734)

2094.	[bug]		razvan
	Fixed a bug which was causing the Kea server to crash when
	using high-availability hooks library and running reconfigure
	commands. Thanks to Caciano Machado for reporting this bug and
	providing detailed steps on how to replicate it.
	(Gitlab #2575)

2093.	[func]		fdupont
	It is now possible to add an "empty" host reservation
	without any attribute (e.g. no address, no hostname, no
	client 	classes, ...)  at all. This is useful to determine
	the KNOWN class.
	(Gitlab #2723)

2092.	[bug]		fdupont
	Added logic to kea-dhcp4 and kea-dhcp6 to catch and log
	database connection errors that occur during lease
	reclamation. Prior to this such errors caused the
	reclamation timer to not get rescheduled.
	(Gitlab #2682)

2091.	[bug]		marcin
	Fixed a bug that caused a response to a config-get command
	to lack the configured read-timeout, write-timeout, and
	tcp-user-timeout parameters.
	(Gitlab #2741)

2090.	[build]		andrei
	Fixed the --with-site-packages configure flag which had no effect
	previously.
	(Gitlab #2669)

Kea 2.3.4 (development) released on January 25, 2022

2089.	[build]		razvan
	The library version numbers have been bumped for the Kea 2.3.4
	development release.
	(Gitlab #2726)

2088.	[func]*		tomek
	The libreload command is now deprecated. The code is still there,
	but it will be removed in the future versions.
	(Gitlab #2693)

2087.	[func]		razvan
	The Kea DHCPv4 server can now handle multiple vendor options
	with different enterprise IDs and multiple vivso-suboptions.
	(Gitlab #1518)

2086.	[bug]		andrei
	A spacing issue in a prepared statement that prevented Config
	Backend from working with PostgreSQL 15 and above has been fixed.