@@ -10,6 +10,7 @@
 #include <cc/data.h>
 #include <dhcp/duid.h>
 #include <dhcp/hwaddr.h>
+#include <dhcp/option_custom.h>
 #include <dhcp/option_int.h>
 #include <dhcp/option4_addrlst.h>
 #include <dhcp/option6_addrlst.h>
@@ -1481,5 +1482,51 @@ TEST_F(HostReservationIdsParserTest, dhcp6EmptyList) {
     std::string config = "[ ]";
     testInvalidConfig<HostReservationIdsParser6>(config);
 }
+
+// Verify that options which encapsulate their own standard
+// namespace don't cause recursion.
+TEST_F(HostReservationParserTest, selfEncapsulation) {
+    // Create configuration with a client-data option for a host.
+    // This option encapsulates dhcp6 option space, and while it
+    // is not an option users would ever configure, let's make
+    // sure it won't do bad things if they do.
+    std::string config = "{ \"duid\": \"01:02:03:04:05:06:07:08:09:0A\","
+        "\"option-data\": ["
+        "{"
+        "    \"name\": \"client-data\","
+        "    \"csv-format\": false,"
+        "    \"data\": \"0001000B0102020202030303030303\""
+        "}"
+        ",{ \"code\": 2, \"data\": \"778899\" }"
+        "]"
+        "}";
+
+    ElementPtr config_element = Element::fromJSON(config);
+
+    HostPtr host;
+    HostReservationParser6 parser;
+    ASSERT_NO_THROW(host = parser.parse(SubnetID(10), config_element));
+    ASSERT_TRUE(host);
+
+    // One host should have been added to the configuration.
+    CfgHostsPtr cfg_hosts = CfgMgr::instance().getStagingCfg()->getCfgHosts();
+    ASSERT_NO_THROW(cfg_hosts->add(host));
+
+    HostCollection hosts;
+    ASSERT_NO_THROW(hosts = cfg_hosts->getAll(Host::IDENT_DUID,
+                                              &duid_->getDuid()[0],
+                                              duid_->getDuid().size()));
+    ASSERT_EQ(1, hosts.size());
+
+    // Retrieve and sanity the client data option.
+    OptionCustomPtr opt = boost::dynamic_pointer_cast<
+        OptionCustom>(retrieveOption(*hosts[0], DHCP6_OPTION_SPACE, D6O_CLIENT_DATA));
+    ASSERT_TRUE(opt);
+
+    // The length should include the explicit data declared plus the length
+    // and data for option 2
+    EXPECT_EQ(26, opt->len());
+}
+
 
 } // end of anonymous namespace
